--- a/Views/Shared/ProjectRedact.cshtml
+++ b/Views/Shared/ProjectRedact.cshtml
@@ -24,7 +24,7 @@
     {<label>Ответственный</label>
         <select name="supervisor" asp-for="redactedProject.supervisor" class="form-control">
             <option asp-for="@Model.redactedProject.supervisor" selected hidden>@Model.redactedProject.supervisor</option>
-            @foreach (var staff in Model.staffs.Where(p => p.roleId == 6))
+            @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R02"))
             {
                 <option>@staff.name</option>
             }
