--- a/Views/Home/TaskTable.cshtml
+++ b/Views/Home/TaskTable.cshtml
@@ -109,11 +109,12 @@
                                 </a>}
 
 
-                            <select class="select" id="select" name="porjectFiltr">
-                                <option value="@Model.filterProj" selected hidden>@Model.filterProj</option>
-                                <option>Все проекты</option>
-                                <option>Проекты в архиве</option>
-                            </select>
+                        <select class="select" id="select" name="porjectFiltr">
+                            <option value="@Model.filterProj" selected hidden>@Model.filterProj</option>
+                            <option>Все проекты</option>
+                            <option>Проекты в архиве</option>
+                            <option>Текущие проекты</option>
+                        </select>
 
 
                             <select class="select" id="select" name="supervisorProjectFilter">
@@ -181,48 +182,48 @@
                             }
                             @if (ViewBag.Role == "Директор")
                             {
-                                foreach (var staff in Model.staffs.Where(p => p.roleId == 6))
+                                foreach (var staff in Model.staffs.Where(p => p.roleCod == "R02"))
                                 {
                                     if (!post.Contains(staff.post)) post.Add(staff.post);
                                 }
-                                foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
+                                foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
                                 {
                                     if (!post.Contains(staff.post)) post.Add(staff.post);
                                 }
                             }
                             else if (ViewBag.Role == "ГИП")
                             {
-                                foreach (var staff in Model.staffs.Where(p => p.roleId == 4))
+                                foreach (var staff in Model.staffs.Where(p => p.roleCod == "R03"))
                                 {
                                     if (!post.Contains(staff.post)) post.Add(staff.post);
                                 }
-                                foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
+                                foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
                                 {
                                     if (!post.Contains(staff.post)) post.Add(staff.post);
                                 }
                             }
                             else if (ViewBag.Role == "Помощник ГИПа")
                             {
-                                foreach (var staff in Model.staffs.Where(p => p.roleId == 1))
+                                foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
                                 {
                                     if (!post.Contains(staff.post)) post.Add(staff.post);
                                 }
                             }
                             else if (ViewBag.Role == "НО")
                             {
-                                foreach (var staff in Model.staffs.Where(p => p.roleId == 6))
+                                foreach (var staff in Model.staffs.Where(p => p.roleCod == "R02"))
                                 {
                                     if (!post.Contains(staff.post)) post.Add(staff.post);
                                 }
 
-                                foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 3))
+                                foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleCod == "R05"))
                                 {
                                     if (!post.Contains(staff.post)) post.Add(staff.post);
                                     RG.Add(staff);
                                 }
                                 foreach (var staff in RG)
                                 {
-                                    foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == staff.code && p.roleId == 2))
+                                    foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == staff.code && p.roleCod == "R06"))
                                     {
                                         if (!post.Contains(staff1.post)) post.Add(staff1.post);
                                     }
@@ -230,7 +231,7 @@
                             }
                             else if (ViewBag.Role == "РГ")
                             {
-                                foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleId == 2))
+                                foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleCod == "R06"))
                                 {
                                     if (!post.Contains(staff.post)) post.Add(staff.post);
                                 }
