--- a/Views/Shared/ManualTableTest.cshtml
+++ b/Views/Shared/ManualTableTest.cshtml
@@ -24,7 +24,7 @@
     @foreach (Staff staff in StaffsUpr)
     {
         <tr id="task">
-            <th>@Model.roles.FirstOrDefault(p => p.id == staff.roleId).name</th>
+            <th>@Model.roles.FirstOrDefault(p => p.code == staff.roleCod).name</th>
             <td>@staff.post</td>
             <td>@staff.name</td>
         </tr>
@@ -36,7 +36,7 @@
     @foreach (Staff staff in StaffPro)
     {
         <tr id="task">
-            <th>@Model.roles.FirstOrDefault(p => p.id == staff.roleId).name</th>
+            <th>@Model.roles.FirstOrDefault(p => p.code == staff.roleCod).name</th>
             <td>@staff.post</td>
             <td>@staff.name</td>
         </tr>
@@ -48,7 +48,7 @@
     @foreach (Staff staff in StaffsIsis)
     {
         <tr id="task">
-            <th>@Model.roles.FirstOrDefault(p => p.id == staff.roleId).name</th>
+            <th>@Model.roles.FirstOrDefault(p => p.code == staff.roleCod).name</th>
             <td>@staff.post</td>
             <td>@staff.name</td>
         </tr>
