--- a/Views/Shared/TaskRedact.cshtml
+++ b/Views/Shared/TaskRedact.cshtml
@@ -12,14 +12,23 @@
            asp-route-Taskid="@Model.redactedTask.id"
            asp-route-activTable="@Model.activeTableIndex"
            asp-route-staffTableFilter="@Model.filterStaff"
-             asp-route-recipientProjectFilter="@Model.filterResProj"
-            asp-route-supervisorProjectFilter="@Model.filterSupProj"
-            asp-route-porjectFiltr="@Model.filterProj"/>
+           asp-route-recipientProjectFilter="@Model.filterResProj"
+           asp-route-supervisorProjectFilter="@Model.filterSupProj"
+           asp-route-porjectFiltr="@Model.filterProj" />
+    @{ 
+        var liteTask = Model.redactedTask.liteTask == false ? "Задача" : "Задача вне очереди";
+    }
+    <select name="liteTask">
+        <option selected hidden>@liteTask</option>
+        <option asp-for="liteTask">Задача</option>
+        <option asp-for="liteTask">Задача вне очереди</option>
+    </select>
+
     @{
         var super = Model.staffs.FirstOrDefault(p => p.name == Model.redactedTask.supervisor);
         var taskSuperRole = Model.roles.FirstOrDefault(p => p.code == super.roleCod).name;
-        bool redact = Model.roles.FirstOrDefault(p => p.name == ViewBag.Role).recipient.Split(',').ToList().Contains(taskSuperRole);
-        }
+        bool redact = ViewBag.Role != "Сотрудник" ? Model.roles.FirstOrDefault(p => p.name == ViewBag.Role).recipient.Split(',').ToList().Contains(taskSuperRole) : false;
+    }
 
     @if ((Model.redactedTask.date.Date >= DateTime.Now.Date && ViewBag.RoleName == Model.redactedTask.creator) || redact)
     {<label>Дата</label>
@@ -46,62 +55,62 @@
     <textarea name="comment" class="form-control"></textarea>
 
 
-    @if (redact)
+    @if (redact || ViewBag.RoleName == Model.redactedTask.creator)
     {<label>Ответственный</label>
-     <select name="supervisor" asp-for="@Model.redactedTask.supervisor">
-         <option asp-for="@Model.redactedTask.supervisor" selected hidden>@Model.redactedTask.supervisor</option>
-         @if (ViewBag.Role == "Директор")
-         {
-             @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R02"))
-             {
-                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
-             }
-             @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
-             {
-                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
-             }
-         }
-         else if (ViewBag.Role == "ГИП")
-         {
-             @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R03"))
-             {
-                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
-             }
-             @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
-             {
-                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
-             }
-         }
-         else if (ViewBag.Role == "Помощник ГИПа")
-         {
-             @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
-             {
-                 <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
-             }
-         }
-         else if (ViewBag.Role == "НО")
-         {
-             @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R02"))
-             {
-                 <option>@staff.name</option>
-             }
-             @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleCod == "R05"))
-             {
-                 <option>@staff.name</option>
-             }
-             foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleCod == "R06"))
-             {
-                 <option>@staff1.name</option>
-             }
-         }
-         else if (ViewBag.Role == "РГ")
-         {
-             @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleCod == "R06"))
-             {
-                 <option>@staff.name</option>
-             }
-         }
-     </select>
+        <select name="supervisor" asp-for="@Model.redactedTask.supervisor">
+            <option asp-for="@Model.redactedTask.supervisor" selected hidden>@Model.redactedTask.supervisor</option>
+            @if (ViewBag.Role == "Директор")
+            {
+                @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R02"))
+                {
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                }
+                @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
+                {
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                }
+            }
+            else if (ViewBag.Role == "ГИП")
+            {
+                @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R03"))
+                {
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                }
+                @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
+                {
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                }
+            }
+            else if (ViewBag.Role == "Помощник ГИПа")
+            {
+                @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R04"))
+                {
+                    <option asp-for="@Model.nullTask.supervisor">@staff.name</option>
+                }
+            }
+            else if (ViewBag.Role == "НО")
+            {
+                @foreach (var staff in Model.staffs.Where(p => p.roleCod == "R02"))
+                {
+                    <option>@staff.name</option>
+                }
+                @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleCod == "R05"))
+                {
+                    <option>@staff.name</option>
+                }
+                foreach (var staff1 in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleCod == "R06"))
+                {
+                    <option>@staff1.name</option>
+                }
+            }
+            else if (ViewBag.Role == "РГ")
+            {
+                @foreach (var staff in Model.staffs.Where(p => p.supervisorCod == ViewBag.RoleCod && p.roleCod == "R06"))
+                {
+                    <option>@staff.name</option>
+                }
+            }
+        </select>
     }
     else
     {
@@ -110,7 +119,7 @@
     }
 
 
-    @if (redact)
+    @if (redact || ViewBag.RoleName == Model.redactedTask.creator)
     {
         <label>Исполнитель</label>
         <select name="recipient" asp-for="@Model.redactedTask.recipient">
@@ -183,7 +192,7 @@
     <label>Приоритет (только для чтения)</label>
     <input readonly name="pririty" class="form-control" value="@priority" />
 
-    @if (redact)
+    @if (redact || ViewBag.RoleName == Model.redactedTask.creator)
     {
         <label>Планируемое время исполнения</label>
         <input name="plannedTime" asp-for="@Model.redactedTask.plannedTime" class="form-control">
@@ -207,8 +216,8 @@
            asp-route-iid="@Model.redactedTask.id"
            asp-route-activTable="@Model.activeTableIndex"
            asp-route-staffTableFilter="@Model.filterStaff"
-             asp-route-recipientProjectFilter="@Model.filterResProj"
-            asp-route-supervisorProjectFilter="@Model.filterSupProj"
-            asp-route-porjectFiltr="@Model.filterProj"/>
+           asp-route-recipientProjectFilter="@Model.filterResProj"
+           asp-route-supervisorProjectFilter="@Model.filterSupProj"
+           asp-route-porjectFiltr="@Model.filterProj" />
 
 </form>
