--- a/Views/Shared/TaskTableTest.cshtml
+++ b/Views/Shared/TaskTableTest.cshtml
@@ -6,7 +6,6 @@
     </colgroup>
     <tr>
         <th>Дата</th>
-        <th>Шифр задачи</th>
         <th>Шифр проекта</th>
         <th>Задача</th>
         <th>Статус</th>
@@ -27,13 +26,13 @@
         {
             <tr id="title"><th style="text-align:left" colspan="13">Выполненные задачи</th></tr>
 
-            foreach (Task task in Model.tasks.Where(p => p.status == "Выполнена").OrderBy(p => p.date.Date).OrderBy(p => p.finish).Reverse())
+            foreach (Task task in Model.task4Table.Where(p => p.status == "Выполнена").OrderBy(p => p.finish))
             {
+                if (Model.staffNames.Contains(task.supervisor) && task.supervisor != ViewBag.RoleName && task.recipient != null) continue;
                 @if (task.liteTask == true)
                 {
                     <tr style="background-color:green" id="finish-task">
                         <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
-                        <td>@task.code</td>
                         <td>@task.projectCode</td>
                         <td>
                             <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="0" asp-route-Taskid="@task.id"
@@ -49,19 +48,22 @@
                         </td>
                         <td>@task.supervisor</td>
                         <td>@task.recipient</td>
-                        <td>@task.priority</td>
+                            @if (task.priority == 0)
+                            {<td>Вне очереди</td>}
+                            else
+                            {<td>@task.priority</td>}
                         <td>@task.comment</td>
                         <td>@task.plannedTime.ToString(@"hh\:mm")</td>
                         <td>@task.actualTime.ToString(@"hh\:mm")</td>
-                        <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
-                        <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        <td>@task.start.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        <td>@task.finish.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        
                     </tr>
                 }
                 else
                 {
                     <tr id="finish-task">
                         <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
-                        <td>@task.code</td>
                         <td>@task.projectCode</td>
                         <td>
                             <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="0" asp-route-Taskid="@task.id"
@@ -77,12 +79,15 @@
                         </td>
                         <td>@task.supervisor</td>
                         <td>@task.recipient</td>
-                        <td>@task.priority</td>
+                        @if (task.priority == 0)
+                            {<td>Вне очереди</td>}
+                            else
+                            {<td>@task.priority</td>}
                         <td>@task.comment</td>
                         <td>@task.plannedTime.ToString(@"hh\:mm")</td>
                         <td>@task.actualTime.ToString(@"hh\:mm")</td>
-                        <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
-                        <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        <td>@task.start.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        <td>@task.finish.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
                     </tr>
                 }
 
@@ -91,14 +96,13 @@
         if (i == 1)
         {
             <tr id="title"><th style="text-align:left" colspan="13">Задачи на сегодня</th></tr>
-            foreach (Task task in Model.tasks.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.Date).OrderBy(p => p.date.Date).OrderBy(p => p.priority))
+            foreach (Task task in Model.task4Table.Where(p => p.status != "Выполнена").Where(p => p.date.Date <= DateTime.Now.Date).OrderBy(p => p.date.Date).OrderBy(p => p.priority))
             {
-
+                if (Model.staffNames.Contains(task.supervisor) && task.supervisor != ViewBag.RoleName && task.recipient != null) continue;
                 @if (task.liteTask == true)
                 {
                     <tr style="background-color:green" id="task">
                         <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
-                        <td>@task.code</td>
                         <td>@task.projectCode</td>
                         <td>
                             <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="0" asp-route-Taskid="@task.id"
@@ -157,19 +161,31 @@
                         </td>
                         <td>@task.supervisor</td>
                         <td>@task.recipient</td>
-                        <td>@task.priority</td>
+                        @if (task.priority == 0)
+                            {<td>Вне очереди</td>}
+                            else
+                            {<td>@task.priority</td>}
                         <td>@task.comment</td>
                         <td>@task.plannedTime.ToString(@"hh\:mm")</td>
                         <td>@task.actualTime.ToString(@"hh\:mm")</td>
-                        <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
-                        <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        @if(task.start <= new DateTime(2022,1,1))
+                        {
+                            <td>-</td>
+                        }else{
+                            <td>@task.start.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        }
+                        @if(task.finish <= new DateTime(2022,1,1))
+                        {
+                            <td>-</td>
+                        }else{
+                            <td>@task.finish.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        }
                     </tr>
                 }
                 else
                 {
                     <tr id="task">
                         <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
-                        <td>@task.code</td>
                         <td>@task.projectCode</td>
                         <td>
                             <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="0" asp-route-Taskid="@task.id"
@@ -228,12 +244,25 @@
                         </td>
                         <td>@task.supervisor</td>
                         <td>@task.recipient</td>
-                        <td>@task.priority</td>
+                        @if (task.priority == 0)
+                            {<td>Вне очереди</td>}
+                            else
+                            {<td>@task.priority</td>}
                         <td>@task.comment</td>
                         <td>@task.plannedTime.ToString(@"hh\:mm")</td>
                         <td>@task.actualTime.ToString(@"hh\:mm")</td>
-                        <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
-                        <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                         @if(task.start <= new DateTime(2022,1,1))
+                        {
+                            <td>-</td>
+                        }else{
+                            <td>@task.start.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        }
+                        @if(task.finish <= new DateTime(2023,1,1))
+                        {
+                            <td>-</td>
+                        }else{
+                            <td>@task.finish.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        }
                     </tr>
                 }
 
@@ -242,13 +271,13 @@
         if (i == 2)
         {
             <tr id="title"><th style="text-align:left" colspan="13">Предстоящие задачи</th></tr>
-            foreach (Task task in Model.tasks.Where(p => p.date.Date > DateTime.Now.Date).OrderBy(p => p.date.Date).OrderBy(p => p.priority))
+            foreach (Task task in Model.task4Table.Where(p => p.date.Date > DateTime.Now.Date).OrderBy(p => p.date.Date).OrderBy(p => p.priority))
             {
+                if (Model.staffNames.Contains(task.supervisor) && task.supervisor != ViewBag.RoleName && task.recipient != null) continue;
                 @if (task.liteTask == true)
                 {
                     <tr style="background-color:green" id="task">
                     <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
-                    <td>@task.code</td>
                     <td>@task.projectCode</td>
                     <td>
                         <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="0" asp-route-Taskid="@task.id"
@@ -307,19 +336,31 @@
                     </td>
                     <td>@task.supervisor</td>
                     <td>@task.recipient</td>
-                    <td>@task.priority</td>
+                    @if (task.priority == 0)
+                            {<td>Вне очереди</td>}
+                            else
+                            {<td>@task.priority</td>}
                     <td>@task.comment</td>
                     <td>@task.plannedTime.ToString(@"hh\:mm")</td>
                     <td>@task.actualTime.ToString(@"hh\:mm")</td>
-                    <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
-                    <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                    @if(task.start <= new DateTime(2022,1,1))
+                        {
+                            <td>-</td>
+                        }else{
+                            <td>@task.start.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        }
+                     @if(task.finish <= new DateTime(2023,1,1))
+                        {
+                            <td>-</td>
+                        }else{
+                            <td>@task.finish.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        }
                     </tr>
                 }
                 else
                 { 
                 <tr id="task">
                     <th>@task.date.Date.ToString(@"dd\.MM\.yyyy")</th>
-                    <td>@task.code</td>
                     <td>@task.projectCode</td>
                     <td>
                         <a asp-controller="Home" asp-action="TaskTable" asp-route-activTable="0" asp-route-Taskid="@task.id"
@@ -378,12 +419,25 @@
                     </td>
                     <td>@task.supervisor</td>
                     <td>@task.recipient</td>
-                    <td>@task.priority</td>
+                    @if (task.priority == 0)
+                            {<td>Вне очереди</td>}
+                            else
+                            {<td>@task.priority</td>}
                     <td>@task.comment</td>
                     <td>@task.plannedTime.ToString(@"hh\:mm")</td>
                     <td>@task.actualTime.ToString(@"hh\:mm")</td>
-                    <td>@task.start.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
-                    <td>@task.finish.Date.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                     @if(task.start <= new DateTime(2022,1,1))
+                        {
+                            <td>-</td>
+                        }else{
+                            <td>@task.start.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        }
+                     @if(task.finish <= new DateTime(2023,1,1))
+                        {
+                            <td>-</td>
+                        }else{
+                            <td>@task.finish.ToString(@"dd\.MM\.yyyy hh\:mm\:ss")</td>
+                        }
                 </tr>
                 }
             }
